added notes about NEWUI
Former-commit-id: 6209a68c84cec2a73a422dd3d507c89108798865

--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,7 @@
 * Make glass more visible/look better (combined texture?)
 * Send points along with spawn state (like frags are)
 * Elaborate and refine Story mode/AI
+* Port NEWUI code
 
 = Models =
 * New player model (tag_affinity, tag_camera, tag_weapon)
@@ -13,6 +14,7 @@
 = Art =
 * Melee icon
 * Dominated/Dominating icons
+* NEWUI widgets
 
 = Sounds =
 * Domination/Revenge
