Former-commit-id: e02fd5e9d8d3df816a31fc48a61689e191525a4d

--- a/todo.txt
+++ b/todo.txt
@@ -17,9 +17,9 @@
 * Zombie/Turret/Pyro/Heavy models
 
 = Art =
-* Melee icon
-* Dominated/Dominating icons
+* Dead, Arrow, Melee, Dominated/Dominating icons
 * NEWUI widgets
+* Current "widgets" need glow removed so they are not clipped by image dimensions
 
 = Sounds =
 * Domination/Revenge
