--- a/todo.txt
+++ b/todo.txt
@@ -26,6 +26,7 @@
 * Double/Triple/Multi kill
 * Spree 5/6 (7/8/9/10?)
 * Team-alert and damage tones
+* First blood (+points?)
 
 = Maps =
 * Fix gravity in 'wet'
