--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 = Code =
+* Instead of wall 'kick', retool into a wall/ceiling 'grab', then use jump to 'kick'
 * Rename 'storyplayers' and 'storymaps' to campaign
 * Allow premature detonation by firing/exploding certain weapons at plasma/grenades
 * Try to balance kamikaze grenades better (timer? penalty?)
